src/clr-addons/treetable/treetable.scss
@use 'sass:map';
@use '../mixins';
@use '../components.variables.clr-addons' as variables;

$base-cell-indentation: 2rem;
$base-caret-indentation: 0.1rem;
$indentation-increment: 1rem;

@mixin row-indentation($level) {
  .treetable-scrolling-cells {
    .treetable-cell:nth-child(1 of .treetable-cell:not(.treetable-hidden-column)) {
      padding-left: $base-cell-indentation + $level * $indentation-increment;
    }

    .treetable-expandable-caret {
      @if ($level > 0) {
        margin-left: $level * $indentation-increment;
      } @else {
        margin-left: $base-caret-indentation;
      }
    }
  }
}

@mixin row-indentation-recursive($level, $max-level) {
  @if $level <= $max-level {
    @include row-indentation($level);

    .treetable-row-wrapper {
      @include row-indentation-recursive($level + 1, $max-level);
    }
  }
}

@mixin basic-table($table, $thead, $tbody, $tr, $th, $td) {
  #{$table} {
    border-collapse: separate;
    border-style: solid;
    border-width: var(--clr-table-borderwidth);
    border-color: var(--clr-table-border-color);
    border-radius: var(--clr-table-border-radius);
    background-color: var(--clr-table-bgcolor);
    color: var(--clr-table-font-color);
    margin: 0;
    margin-top: 0.5rem;
    max-width: 100%;
    width: 100%;

    #{$th},
    #{$td} {
      font-size: var(--clr-base-typography-font-size-default);
      font-weight: var(--cds-alias-typography-body-font-weight);
      line-height: var(--clr-base-typography-line-height-16);
      letter-spacing: calc(-0.1 * (1rem / var(--cds-global-base)));

      min-width: var(--cds-global-layout-space-xxl);
      padding: 0.55rem 0.6rem;

      text-align: center;
      vertical-align: top;

      border-top-style: solid;
      border-top-width: var(--clr-table-borderwidth);
      border-top-color: var(--clr-tablerow-bordercolor);
    }

    #{$th} {
      font-size: var(--clr-base-typography-font-size-caption);
      font-weight: var(--cds-alias-typography-font-weight-semibold);
      line-height: var(--clr-base-typography-line-height-16);
      letter-spacing: calc(0.2 * (1rem / var(--cds-global-base)));

      color: var(--clr-thead-color);
      background-color: var(--clr-thead-bgcolor);
      vertical-align: bottom;
      border-bottom-style: solid;
      border-bottom-width: var(--clr-table-borderwidth);
      border-bottom-color: var(--clr-table-border-color);
      border-top: 0 none;
    }

    #{$tbody} #{$tr}:first-child #{$td} {
      border-top: 0 none;
    }

    // in the rare event we have more than one tbody element.
    #{$tbody} + #{$tbody} {
      border-top-style: solid;
      border-top-width: var(--clr-table-borderwidth);
      border-top-color: var(--clr-table-border-color);
    }

    // Rounded corners on tables are a pain...
    #{$thead} #{$th} {
      &:first-child {
        border-radius: 0;
        border-top-left-radius: var(--clr-table-cornercellradius);
      }

      &:last-child {
        border-radius: 0;
        border-top-right-radius: var(--clr-table-cornercellradius);
      }
    }

    #{$tbody}:last-child {
      #{$tr}:last-child {
        #{$td} {
          &:first-child {
            border-radius: 0;
            border-bottom-left-radius: var(--clr-table-cornercellradius);
          }

          &:last-child {
            border-radius: 0;
            border-bottom-right-radius: var(--clr-table-cornercellradius);
          }
        }
      }
    }
  }
}

@mixin clr-button-no-styles {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  -o-appearance: none;
  margin: 0;
  padding: 0;
  border: none;
  border-radius: 0;
  box-shadow: none;
  background: none;

  @at-root button#{&} {
    cursor: pointer;
  }
}

@mixin clr-treetable-popover {
  background: var(--cds-alias-object-container-background);
  border-color: var(--cds-alias-object-border-color);
  color: var(--cds-alias-typography-color-400);
  box-shadow: var(--cds-alias-object-shadow-100);
}

@mixin subsection-16-exp {
  font-size: var(--cds-global-space-7);
  font-weight: var(--cds-alias-typography-subsection-font-weight);
  line-height: var(--cds-global-space-9);
  letter-spacing: mixins.baselinePx(-0.2);
}
/* ... */

